syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

message AssignDiskRequest {
    types.Disk Disk = 1;
    string InstanceId = 2;
    string Host = 3;
    string Token = 4;
}

message AssignDiskTaskState {
    AssignDiskRequest Request = 1;
}

