syntax = "proto3";

package NUgc.NSchema.NOrgs;

import "kernel/ugc/proto/aspects.proto";
import "kernel/ugc/proto/org/org_review.proto";
import "kernel/ugc/proto/common/rating_stats.proto";

message TOrgRating {
    float Value = 1;
    uint32 Count = 2;
}

message TOrgDigestParams {
    uint32 Offset = 1;                  // offset is divisible on limit
    uint32 Limit = 2;                   // reviews count on page 1..50
    uint32 Count = 3;                   // total reviews count with current filter
    string FilterKeyPhrase = 4;         // key phrase filter
    bool FilterMyReview = 5;            // remove my review from reviews list
}

message TOrgKeyPhrase {
    string Key = 1;
    uint32 Count = 2;                   // total review count with key phrase
}

message TOrgDigest {
    TOrgDigestParams Params = 1;        // request params
    uint32 TotalCount = 2;              // reviews or feedback count. Depends on RatingPolicy
    repeated TOrgReview Reviews = 3;    // reviews with user likes and without user review
    TOrgRating Rating = 4;
    TOrgReview MyReview = 5;            // user review
    repeated TOrgKeyPhrase KeyPhrases = 6;

    repeated NUgc.NSchema.TAspectCount AspectsCount = 7;
    repeated NUgc.NSchema.TCategoryAspectsStats CategoryAspectsStats = 8;

    TRatingStats RatingStats = 9;
    uint32 ReviewCount = 10;              // reviews count(from snippet)
    uint32 FeedbackCount = 11;             // feedback count(from snippet)
}
